--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "cookie-parser": "^1.4.7",
+    "daisyui": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
