--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "daisyui": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
