--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "daisyui": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "next": "15.5.0",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
@@ -31,7 +31,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
